fixed pin location mobile

--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -7,6 +7,8 @@
     color: $colorWhite;
     text-align: center;
 
+
+
     .map {
         width: 100%;
         height: 60rem;
@@ -24,9 +26,10 @@
             top: 18rem;
 
             //z-index: 2;
-            @media screen and (max-width: $mobileScreen) {
-                left: 7.5rem;
+            @media screen and (min-width: 300px) and (max-width: 1000px) {
+                //left: 7.5rem;
                 top: 13rem;
+                position: fixed;
             }
         }
 
@@ -36,9 +39,10 @@
             top: 18.5rem;
 
             //z-index: 2;
-            @media screen and (max-width: $mobileScreen) {
-                left: -5.5rem;
-                top: 11rem;
+            @media screen and (min-width: 300px) and (max-width: 1000px) {
+                left: -2rem;
+                top: 12.75rem;
+                position: fixed;
             }
         }
 
@@ -48,9 +52,10 @@
             top: 16.5rem;
 
             //z-index: 2;
-            @media screen and (max-width: $mobileScreen) {
-                left: -4.3rem;
-                top: 9.75rem;
+            @media screen and (min-width: 300px) and (max-width: 1000px) {
+                left: -11rem;
+                top: 11rem;
+                position: fixed;
             }
         }
 
@@ -58,7 +63,7 @@
             width: 75%;
             z-index: 1;
 
-            @media screen and (max-width: $mobileScreen) {
+            @media screen and (min-width: 300px) and (max-width: 1000px) {
                 width: 50%;
             }
         }
